# archive-query-log

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .markdownlint.yml  .prettierrc  Dockerfile  I18N.md  LICENSE  Pipfile  README.md  angular.json  cli  config.yml  decode_error_dump.html  docker-compose.yml  eslint.config.js  mkdocs.yml  mypy.ini  nginx.conf  package-lock.json  package.json  proces_corpus.ipynb  pyproject.toml  pytest.ini  ray-runtime-env.local.yml  ray-runtime-env.yml  requirements.txt  run_cdx_batch.sh  run_parse_serp_batch.sh  run_raw_serp_batch.sh  slurm-cli  slurm-setup  test_advanced_search_urls.py  tsconfig.json  tsconfig.spec.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
.gitlab/issue_templates/: user_story.md
app/: main.py
app/core/: elastic.py  settings.py
app/routers/: hello.py  search.py
app/schemas/: aql.py
app/services/: aql_service.py
app/utils/: advanced_search_parser.py  url_cleaner.py  url_unfurler.py
archive_query_log/: __init__.py  __main__.py  beam.py  cdx.py  config.py  generate_review_sample.py  memento.py  namespaces.py  orm.py  schema.py  service_stats.py  spark.py  test_fastwarc.py  warc_s3.py
archive_query_log/api/: __init__.py  dependencies.py  main.py
archive_query_log/archives/: __init__.py
archive_query_log/browser/: __init__.py  main.py
archive_query_log/captures/: __init__.py
archive_query_log/cli/: __init__.py  alexa.py  api.py  archives.py  captures.py  corpus.py  external.py  index.py  make.py  monitoring.py  parsers.py  providers.py  results.py  serps.py  sources.py  stats.py  util.py  web_search_result_blocks.py
archive_query_log/compat/: aql22.py
archive_query_log/dashboard/: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.mts
archive_query_log/download/: iterable.py  raw.py  warc.py
archive_query_log/downloaders/: cache_cleanup.py  ia_metadata.py  warc.py
archive_query_log/export/: __init__.py  base.py  jsonl.py  knowledge_graph.py  ttl.py
archive_query_log/imports/: aql22.py  archive_it.py  yaml.py
archive_query_log/index/: __init__.py
archive_query_log/ir_datasets/: Dockerfile.ir_datasets  Makefile  README.md  archive_query_log_ir_datasets_integration.py
archive_query_log/legacy/: __init__.py  config.py  conftest.py  generate_review_sample.py  iterable.py  model.py  service_stats.py  test_fastwarc.py
archive_query_log/model/: __init__.py  parse.py
archive_query_log/monitoring/: __init__.py  home.py
archive_query_log/new/: __main__.py  cdx.py  config.py  http.py  namespaces.py  note.md  orm.py
archive_query_log/parse/: url_offset.py  url_page.py  url_query.py
archive_query_log/parsers/: html.py  url.py  url_offset.py  url_page.py  url_query.py  util.py  warc.py  warc_direct_answers.py  warc_query.py  warc_snippets.py  warc_special_contents_result_blocks.py  warc_web_search_result_blocks.py  xml.py
archive_query_log/providers/: __init__.py
archive_query_log/queries/: iterable.py  parse.py
archive_query_log/results/: chatnoir.py  parse.py
archive_query_log/serps/: iterable.py
archive_query_log/services/: __init__.py  alexa.py  search_forms.py  test_services.py  update_yaml.py
archive_query_log/sources/: __init__.py
archive_query_log/templates/: home.html
archive_query_log/urls/: fetch.py  iterable.py
archive_query_log/util/: archive_http.py  iterable.py  serialization.py
archive_query_log/utils/: es.py  time.py  warc.py  warc_cache.py
archive_query_log/web/: __init__.py  home.py
browser/: .gitlab-ci.yml  .prettierignore  Dockerfile  I18N.md  README.md  angular.json  eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json
browser-backend/: .env.example  .gitignore  Dockerfile  README.md
browser-backend/app/: main.py
browser-backend/tests/: conftest.py  test_advanced_search_parser.py  test_autocomplete.py  test_elastic.py  test_exception_coverage.py  test_exception_handlers.py  (+2 more)
data/: .gitignore  selected-services.yaml  services.yaml
docs/: browser-backend.md  browser-product-backlog.md  collection-metadata.md  collection-metadata.xlsx  test.md
helm/: .gitignore  Chart.yaml  archive-query-log-uninstall.sh  install.sh  values.yaml
internet_archive_query_log/: __init__.py  __main__.py  config.py  config_model.py  model.py  parse.py  queries.py  serps.py  sites.py  util.py
k8s/: README.md  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml.example  service.yaml
knowledge_graph/: mkdocs.yml  schema.ttl  schema_shacl.ttl
notebooks/: .gitignore  Makefile  aql-agent-demo.ipynb  calculate-sbert-embeddings.ipynb  evaluation_corpus_fields.ipynb  evaluation_most_referenced_domains.ipynb  evaluation_query_length.ipynb  evaluation_results_per_serp.ipynb  evaluation_services_overview.ipynb  evaluation_time_series.ipynb  evaluation_trec_overlap.ipynb  evaluation_us_election.ipynb  example_corpus_parquet.ipynb  legacy_parser_conversion.ipynb  legacy_test_conversion.ipynb  obscene_queries.ipynb  obscene_words.json  pornographic_queries.ipynb  process_corpus.ipynb  process_stats.ipynb  services.txt
scripts/: analyze_operators.py  create_corpus.py  create_corpus.sh  create_url_list.py  create_url_list.sh  download_corpus.sh  histogram_google_trends.py  process_corpus.py  process_corpus.sh  reorder-members.js
src/: index.html  styles.css  styles.scss
tests/: __init__.py  conftest.py  search_by_year.py  test_advanced_search_parser.py  test_aql_service.py  test_autocomplete.py  test_exception_coverage.py  test_hello.py  test_main.py  test_namespaces.py  test_search_advanced.py  test_search_advanced_mode.py  test_search_basic.py  test_search_fuzzy.py  test_search_router.py  test_search_router_unbranded.py  test_serp_view_switcher.py  test_warc_query_parsers.py  utils.py
tira-tutorial/: .gitignore  README.md  aql-experiment-baseline.py
web_archive_query_log/: __init__.py  __main__.py  beam.py  config.py  config_model.py  create_source.py  parse.py  service_stats.py
(+1585 files in other folders)
