[project]
name = "archive-query-log"
authors = [
    { name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de" },
    { name = "Simon Ruth", email = "simon.ruth@uni-kassel.de" },
    { name = "Sebastian Heineking", email = "sebastian.heineking@uni-leipzig.de" },
    { name = "Maik Fröbe", email = "maik.froebe@uni-jena.de" },
    { name = "Lukas Gienapp", email = "lukas.gienapp@uni-leipzig.de" },
    { name = "Harrisen Scells", email = "harry.scells@uni-leipzig.de" },
    { name = "Benno Stein", email = "benno.stein@uni-weimar.de" },
    { name = "Matthias Hagen", email = "matthias.hagen@uni-jena.de" },
    { name = "Martin Potthast", email = "martin.potthast@uni-kassel.de" },
]
description = "Mining Millions of Search Result Pages of Hundreds of Search Engines from 25 Years of Web Archives."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp~=3.13",
    "boto3~=1.35.0",
    "certifi~=2025.8",
    "cssselect~=1.3",
    "cyclopts~=3.23",
    "diskcache~=5.6",
    "elasticsearch~=7.17",
    "elasticsearch-dsl~=7.4",
    "elasticsearch-pydantic~=1.1",
    "expiringdict~=1.2",
    "fastapi~=0.121.2",
    "httpx~=0.28.1",
    "humanize~=4.13",
    "lxml~=6.0",
    "pandas~=2.3",
    "pydantic~=2.12",
    "pydantic-extra-types[pycountry]~=2.10",
    "pydantic-settings~=2.12",
    "python-dotenv~=1.1",
    "python-whois~=0.9.5",
    "pyyaml~=6.0",
    "ray[data]~=2.49",
    "ray-elasticsearch~=1.1,>=1.1.1",
    "requests~=2.32",
    "requests-ratelimiter~=0.7.0",
    "resiliparse~=0.15.2",
    "slowapi~=0.1.9",
    "tldextract~=5.3",  # TODO: Replace with dfir-unfurl.
    "tqdm~=4.67",
    # boto3~=1.35 depends on urllib3<1.27
    "urllib3~=1.26",
    "uvicorn>=0.38,<0.41",
    "validators~=0.35.0",
    "warcio~=1.7",
    "warc-s3~=1.0,>=1.0.1",
    "warc-cache~=1.0,>=1.0.4",
    "web-archive-api~=1.1",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "approvaltests~=14.5",
    "boto3-stubs[s3]~=1.35.0",
    "mypy~=1.19",
    "pandas-stubs~=2.3",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
    "pytest-cov~=7.0",
    "ruff~=0.13.1",
    "types-lxml~=2025.3",
    "types-pyyaml~=6.0",
    # types-requests~=2.32 depends on urllib3>=2
    "types-requests~=2.0",
    "types-tqdm~=4.67",
    "types-urllib3~=1.26",
]
examples = [
    "beautifulsoup4~=4.12",
    "bleach~=6.2",
    "jupyter~=1.0",
    "matplotlib~=3.7",
    # numpy 2.0 is not compatible with elasticsearch 7.9.1
    "numpy<2.0",
    "publicsuffixlist~=1.0,>=1.0.2.20250430",
    "seaborn~=0.13.0",
    "types-beautifulsoup4~=4.12",
    "types-bleach~=6.2",
]
documentation = ["mkdocs~=1.5", "mkdocs-material~=9.5"]

[project.urls]
"Homepage" = "https://github.com/webis-de/archive-query-log"
"Bug Tracker" = "https://github.com/webis-de/archive-query-log/issues"

[project.scripts]
archive_query_log = "archive_query_log.cli:cli"
archive-query-log = "archive_query_log.cli:cli"
aql = "archive_query_log.cli:cli"

[build-system]
requires = ["setuptools~=80.1", "setuptools_scm[toml]~=9.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    "notebooks",
    "integrations",
    "scripts",
    "data",
    "docs",
    "helm",
]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.rst"]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    "notebooks",
    "integrations",
    "scripts",
    "data",
    "docs",
    "helm",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "S",  # Security issues
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "build",
    "venv",
    "notebooks",
    "integrations",
    "scripts",
    "data",
    "docs",
    "helm",
]

[tool.pytest.ini_options]
log_cli = true
